// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateCitationView test should render component with date : [July 1st, 2017] 1`] = `
<span
  className="citationDate"
>
  [
  July 1st, 2017
  ]
</span>
`;

exports[`DateCitationView test should render component with date : On the 1st day of June in 2017 1`] = `
<span
  className="citationDate"
>
  On the 1st day of July in 2017
</span>
`;

exports[`DateCitationView test should render component with date in TZ format 1`] = `
<span
  className="citationDate"
>
  (
  2017
  ).
</span>
`;

exports[`DateCitationView test should render component with date in user's timezone 1`] = `
<span
  className="citationDate"
>
  (
  2017-07-01
  ).
</span>
`;

exports[`DateCitationView test should render component with date not in TZ format 1`] = `
<span
  className="citationDate"
>
  (
  2010
  ).
</span>
`;

exports[`DateCitationView test should render component with default prefix and suffix : (1/6/2017). 1`] = `
<span
  className="citationDate"
>
  (
  2017
  ).
</span>
`;

exports[`DateCitationView test should render component with just the year in brackets : (2017). 1`] = `
<span
  className="citationDate"
>
  (
  2017
  ).
</span>
`;

exports[`DateCitationView test should render empty component with a placeholder date 1`] = `
<span
  className="citationDate empty"
/>
`;

exports[`DateCitationView test should render empty component with no date 1`] = `
<span
  className="citationDate empty"
/>
`;
